Heavy parameterization refactoring on some generators and template writing handlers. refs #200